tests/block_scope_leak.test
let x = (let y = 1; y);
print y;
####
SyntaxError: Undefined variable
let x = (let y = 1; y);
print y;
      ^
